kubernetes/llm/components/model-downloader/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internet-egress-model-downloader
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: model-downloader
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: model-downloader
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-openshift-ingress-model-downloader
  namespace: llm
  annotations:
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app: model-downloader
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      app: model-downloader
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
      ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
